<resources>
    <string name="app_name">MoreSports</string>

    <string name="ver_noticias">See published news</string>
    <string name="nova_noticia">Publish new news</string>

    <string name="noticia_titulo">New news</string>
    <string name="noticia_hint_titulo">Title</string>
    <string name="noticia_hint_noticia">Write the news</string>
    <string name="noticia_hint_data">Publication date</string>
    <string name="noticia_hint_autor">Author</string>
    <string name="noticia_button_publicar">Publish</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>