<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/azulzin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noticia_titulo"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />
    
    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noticia_hint_titulo"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/editNoticia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:hint="@string/noticia_hint_noticia"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/editdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noticia_hint_data"
        android:maxLength="10"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/editautor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noticia_hint_autor"
        android:maxLines="1"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/btPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noticia_button_publicar"
        android:backgroundTint="@color/roxin"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:padding="15dp"
        android:layout_margin="20dp"
        />
</LinearLayout>
</ScrollView>